# cworthy

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-ci.yml
notebook/: eda.ipynb
